--- a/configs/rl_01.yaml
+++ b/configs/rl_01.yaml
@@ -34,6 +34,8 @@ datafile_test: ['realdata/augdata_01-Dec-2021_5m.csv',
           'realdata/augdata_04-Apr-2022_5m.csv', 
           'realdata/augdata_02-May-2022_5m.csv',  
           'realdata/augdata_04-Jul-2022_5m.csv',
-          'realdata/augdata_16-Dec-2022_5m.csv']
+          'realdata/augdata_16-Dec-2022_5m.csv',
+          'alldata.csv'
+          ]
 
 model_suffixes: ['']
